ClueHunt-QR update 1215

--- a/code_newgame.html
+++ b/code_newgame.html
@@ -20,10 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"> New Game/Code Login <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="code_newgame.html"> New Game/Code <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Landing Page</a>
+              <a class="nav-link" href="login.html">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="clue_page.html">Clue</a>
             </li>
         </div>
       </nav>
@@ -32,7 +35,7 @@
           <h1 class="display-4">QR Scavenger Clue Hunt</h1>
           <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis officiis quas enim commodi dicta, dolores magnam vitae voluptatem neque deleniti animi atque, quasi dolorum quos necessitatibus consequatur repellat qui ratione.</p>
           <hr class="my-4">
-          <p>If you have your game code, please enter in the provided form. Otherwise click: Start New Game</p>
+          <p>If you have your game code, please enter in the provided form. Otherwise click: <b>Start New Game</b></p>
 
 
       <!-- Form for filling out Game Code + Submit button -->
