--- a/code_newgame.html
+++ b/code_newgame.html
@@ -8,6 +8,10 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Google Fonts API - Raleway -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <!-- Navigation bar -->
@@ -31,11 +35,12 @@
         </div>
       </nav>
 
+      <!-- /__________________________________________________________________________________________________________________________________/ -->
       <div class="jumbotron">
-          <h1 class="display-4">QR Scavenger Clue Hunt</h1>
-          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis officiis quas enim commodi dicta, dolores magnam vitae voluptatem neque deleniti animi atque, quasi dolorum quos necessitatibus consequatur repellat qui ratione.</p>
+          <h1 class="display-4">Game Mode</h1>
+          <p class="lead">If you have your game code, please enter in the provided form. Otherwise click: <b>Start New Game</b></p>
           <hr class="my-4">
-          <p>If you have your game code, please enter in the provided form. Otherwise click: <b>Start New Game</b></p>
+
 
 
       <!-- Form for filling out Game Code + Submit button -->
