--- a/clue_page.html
+++ b/clue_page.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -43,7 +44,7 @@
 
       <!--Card image-->
       <div class="view view-cascade gradient-card-header blue-gradient">
-        <h5 class="mb-0">Regular map</h5>
+        <h5 class="mb-0">Clue map</h5>
       </div>
       <!--/Card image-->
 
@@ -63,38 +64,7 @@
     <!--/.Card-->
 
   </div>
-  <!--Grid column-->
 
-  <!--Grid column-->
-  <div class="col-md-6 mb-4">
-
-    <!--Card-->
-    <div class="card card-cascade narrower">
-
-      <!--Card image-->
-      <div class="view view-cascade gradient-card-header peach-gradient">
-        <h5 class="mb-0">Custom map</h5>
-      </div>
-      <!--/Card image-->
-
-      <!--Card content-->
-      <div class="card-body card-body-cascade text-center">
-
-        <!--Google map-->
-        <div id="map-container-google-9" class="z-depth-1-half map-container-5" style="height: 300px">
-          <iframe src="https://maps.google.com/maps?q=Madryt&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-            style="border:0" allowfullscreen></iframe>
-        </div>
-
-
-      </div>
-      <!--/.Card content-->
-
-    </div>
-    <!--/.Card-->
-
-  </div>
-  <!--Grid column-->
 
 </div>
 <!--Grid row-->
