--- a/game_mode.html
+++ b/game_mode.html
@@ -12,11 +12,13 @@
     <!-- Google Fonts API - Raleway -->
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
+    <!-- Local Style - CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">QR Scavenger Clue Hunt</a>
+        <a class="navbar-brand" href="code_newgame.html">QR Scavenger Clue Hunt</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,14 +26,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="code_newgame.html"> New Game/Code <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="game_mode.html"> Game Mode <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="new_game.html">New Game</a>
+            </li>
+            <!-- Through the Login Page -> User can click Dashboard  -->
             <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="clue_page.html">Clue</a>
             </li>
+
         </div>
       </nav>
 
@@ -47,13 +55,16 @@
       <form>
           <div class="col-xs-4 form-group" >
             <h3 for="inputGameCode">Game Code</h3>
-            <input type="password" class="form-control" id="gameCode" placeholder="ABCDE12345">
+            <input type="gameCode" class="form-control" id="gameCode" placeholder="ABCDE12345">
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 
       <h3>Click Here to Start New Game</h3>
       <button type="button" class="btn btn-success">New Game</button>
+
+      <h3>Login</h3>
+      <button type="button" class="btn btn-secondary">Login</button>
 
     </div>
     <!-- Optional JavaScript -->
