--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
       <!-- Navigation bar -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="code_newgame.html">QR Scavenger Clue Hunt</a>
+            <a class="navbar-brand" href="game_mode.html">QR Scavenger Clue Hunt</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
