--- a/game_mode.html
+++ b/game_mode.html
@@ -31,7 +31,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="new_game.html">New Game</a>
             </li>
-            <!-- Through the Login Page -> User can click Dashboard  -->
             <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
@@ -53,15 +52,15 @@
 
       <!-- Form for filling out Game Code + Submit button -->
       <form>
-          <div class="col-xs-4 form-group" >
+          <div class="gameCode col-xs-4 form-group" >
             <h3 for="inputGameCode">Game Code</h3>
             <input type="gameCode" class="form-control" id="gameCode" placeholder="ABCDE12345">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="submitButton btn btn-primary">Submit</button>
       </form>
 
       <h3>Click Here to Start New Game</h3>
-      <button type="button" class="btn btn-success">New Game</button>
+      <button type="button" class="newGame btn btn-success">New Game</button>
 
       <h3>Login</h3>
       <button type="button" class="btn btn-secondary">Login</button>
