--- a/game_mode.html
+++ b/game_mode.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="game_mode.html"> Game Mode <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="game_mode.html">Game Mode<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="new_game.html">New Game</a>
@@ -34,7 +34,6 @@
             <li class="nav-item">
               <a class="nav-link" href="login.html">Login</a>
             </li>
-
             <li class="nav-item">
                 <a class="nav-link" href="clue_page.html">Clue</a>
             </li>
@@ -42,7 +41,7 @@
         </div>
       </nav>
 
-      <!-- /__________________________________________________________________________________________________________________________________/ -->
+      <!-- /_______________________________________________________________Main________________________________________________________________/ -->
       <div class="jumbotron">
           <h1 class="display-4">Game Mode</h1>
           <p class="lead">If you have your game code, please enter in the provided form. Otherwise click: <b>Start New Game</b></p>
@@ -63,7 +62,7 @@
       <button type="button" class="newGame btn btn-success">New Game</button>
 
       <h3>Login</h3>
-      <button type="button" class="btn btn-secondary">Login</button>
+      <button type="button" class="login btn btn-secondary">Login</button>
 
     </div>
     <!-- Optional JavaScript -->
