--- a/game_mode.html
+++ b/game_mode.html
@@ -53,7 +53,7 @@
       <form>
           <div class="gameCode col-xs-4 form-group" >
             <h3 for="inputGameCode">Game Code</h3>
-            <input type="gameCode" class="form-control" id="gameCode" placeholder="ABCDE12345">
+            <input type="gameCode" class="gameCodeForm form-control" id="gameCode" placeholder="ABCDE12345">
           </div>
           <button type="submit" class="submitButton btn btn-primary">Submit</button>
       </form>
