--- a/new_game.html
+++ b/new_game.html
@@ -89,8 +89,8 @@
           </table>
 
           <!-- Buttons -->
-          <input class="btn btn-primary" type="submit" value="Save Input">
-          <input class="btn btn-primary" type="reset" value="Edit">
+          <input class="saveInput btn btn-primary" type="submit" value="Save Input">
+          <input class="editButton btn btn-primary" type="reset" value="Edit">
 
           <!-- Option 2: Table within card.  -->
               <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
@@ -123,9 +123,9 @@
                   </table>
                 </div>
                 <!-- Buttons -->
-                <input class="btn btn-primary" type="submit" value="Save Input">
+                <input class="saveInput btn btn-primary" type="submit" value="Save Input">
                 <br>
-                <input class="btn btn-primary" type="reset" value="Edit">
+                <input class="editButton btn btn-primary" type="reset" value="Edit">
               </div>
 
 
