--- a/login.html
+++ b/login.html
@@ -57,15 +57,15 @@
                 <form class = "bg-dark" style = "color:white">
                         <div class="form-group">
                           <label for="userName">Name</label>
-                          <input type="name" class="form-control" id="inputName" aria-describedby="nameHelp" placeholder="Enter name">
-                          <small id="nameHelp" class="form-text text-muted"></small>
+                          <input type="name" class="nameForm form-control" id="inputName" aria-describedby="nameHelp" placeholder="Enter name">
+                          <small id="nameHelp" class="passwordForm form-text text-muted"></small>
                         </div>
                         <div class="form-group">
                           <label for="userPassword">Password</label>
-                          <input type="password" class="form-control" id="InputPassword1" placeholder="************">
+                          <input type="password" class="form-control" id="inputPassword1" placeholder="************">
                         </div>
 
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="submitButton2 btn btn-primary">Submit</button>
                 </form>
                 <!-- </div> -->
         </div>
