--- a/login.html
+++ b/login.html
@@ -41,6 +41,7 @@
                 </li>
             </div>
         </nav>
+        <!-- End of Navigation Bar -->
 
         <div class="jumbotron">
                 <h1 class="display-4">Login</h1>
@@ -52,22 +53,26 @@
                         <div class="card-header"></div>
                         <div class="card-body">
 
+                      </div> -->
+                      <form>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                          <small id="emailHelp" class="form-text" style= "color: white">We'll never share your email with anyone else.</small>
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1">Password</label>
+                          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        </div>
+
+                        <!-- Possible Remember Me* Nice to have function -->
+                        <!-- <div class="form-group form-check">
+                          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                          <label class="form-check-label" for="exampleCheck1">Remember Me</label>
                         </div> -->
-
-                <form class = "bg-dark" style = "color:white">
-                        <div class="form-group">
-                          <label for="userName">Name</label>
-                          <input type="name" class="nameForm form-control" id="inputName" aria-describedby="nameHelp" placeholder="Enter name">
-                          <small id="nameHelp" class="passwordForm form-text text-muted"></small>
-                        </div>
-                        <div class="form-group">
-                          <label for="userPassword">Password</label>
-                          <input type="password" class="form-control" id="inputPassword1" placeholder="************">
-                        </div>
-
-                        <button type="submit" class="submitButton2 btn btn-primary">Submit</button>
-                </form>
-                <!-- </div> -->
+                        <button type="submit" class="loginBtn btn btn-primary">Login</button>
+                      </form>
+                    </div>
         </div>
         <!-- Closing tag for jumbotron -->
 
