Table population via jquery

--- a/testBench.html
+++ b/testBench.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Testing... testing... 1... 2... 3...</title>
+
+    <!-- Style.css -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 
 <body>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
     ​
@@ -19,6 +24,45 @@
     <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-database.js"></script>
 
     <script src="assets/javascript/dbControll.js"></script>
+    <script src="assets/javascript/app.js"></script>
+    <!--Start Page Test-->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-9 col-md-6 col-lg-4">
+                <div class="card text-white bg-primary">
+                    <img class="card-img-top" src="" alt="">
+                    <div class="card-body">
+                        <!--Form Data Below-->
+                        <div id="create-new-game" class="form-group">
+
+                            <label for="owner-name">Owner</label>
+                            <textarea class="form-control" name="owner-name" id="owner-name" rows="1"></textarea>
+
+                            <label for="group-name">Name Your Game</label>
+                            <textarea class="form-control" name="group-name" id="group-name" rows="1"></textarea>
+
+                            <label for="number-of-clues">How many clues?</label>
+                            <input type="number" min="0" name="number-of-clues" id="number-of-clues" class="form-control" placeholder="Pick a number, any number" aria-describedby="helpId">
+                            <button type="submit" class="btn btn-primary" id="new-game">Submit</button>
+
+                        </div>
+                        <!-- Table Data Below-->
+                        <table id="clues-and-hints">
+                            <thead>
+                                <tr>
+                                    <td>Number</td>
+                                    <td>Clue</td>
+                                    <td>Hint</td>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Test Page -->
 </body>
 
 </html>
