web_design game_tracker @media css phone, tablet, desktop

--- a/tracking_page.html
+++ b/tracking_page.html
@@ -51,14 +51,14 @@
   </nav>
 
   <!-- /_______________________________________________________________Main________________________________________________________________/ -->
-  <div class="jumbotron">
+  <div class="jumbotron gameTracker">
     <h1 class="display-4">Game Tracker</h1>
     <p class="lead"><b>Tracking Progress of game.</b></p>
     <hr class="my-4">
 
 
     <!-- Table -->
-    <table class="table">
+    <table class="trackerTable">
       <thead class="thead-dark">
         <tr>
           <th scope="col">Clue #</th>
