dashboard creation, getting some elements in.

--- a/dashboard.html
+++ b/dashboard.html
@@ -66,31 +66,32 @@
             <thead>
                 <tr>
                     <th>Current Active Clue Games |</th>
-
-
-                    <th>Number of Clues</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>x</td>
+                    <td>x</td><input class="editButton btn btn-primary" type="reset" value="Edit">
                 </tr>
+
                 <tr>
                     <td>2</td>
-                    <td>y</td>
+                    <td>y</td><input class="editButton btn btn-primary" type="reset" value="Edit">
                 </tr>
+
             </tbody>
             <tfoot>
                 <tr>
                     <td>3</td>
-                    <td>z</td>
+                    <td>z</td><input class="editButton btn btn-primary" type="reset" value="Edit">
                 </tr>
+
             </tfoot>
         </table>
 
         <!-- Buttons -->
-        <input type= "button" onclick="location.href='new_game.html'; "value="submit" value="Create New Clue Hunt">
+        <input type="button" onclick="location.href='new_game.html'; " value="Create New Game"
+            value="Create New Clue Hunt">
         </form>
         <input class="editButton btn btn-primary" type="reset" value="Edit">
     </div>
