fixing tables and rows with edit buttons

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Dashboard</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -52,6 +52,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="clue_page.html">Clue</a>
                 </li>
+                <li class="nav-item">
+                        <a href="#" class="btn btn-info btn-lg">
+                                <span class="glyphicon glyphicon-log-out"></span> Log out
+                              </a>
+                </li>
 
         </div>
     </nav>
@@ -71,22 +76,25 @@
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>x</td><input class="editButton btn btn-primary" type="reset" value="Edit">
+                    <td>x</td>
+                    <td>
+                        <input class="editButton btn btn-primary" type="reset" value="Edit Game"></td>
                 </tr>
 
                 <tr>
                     <td>2</td>
-                    <td>y</td><input class="editButton btn btn-primary" type="reset" value="Edit">
+                    <td>y</td>
+                    <td>
+                        <input class="editButton btn btn-primary" type="reset" value="Edit Game">
+                    </td>
                 </tr>
-
-            </tbody>
-            <tfoot>
                 <tr>
                     <td>3</td>
-                    <td>z</td><input class="editButton btn btn-primary" type="reset" value="Edit">
+                    <td>z</td>
+                    <td>
+                        <input class="editButton btn btn-primary" type="reset" value="Edit Game"></td>
                 </tr>
-
-            </tfoot>
+            </tbody>
         </table>
 
         <!-- Buttons -->
