--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
                     <th>Current Active Clue Games |</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="active_game_table">
                 <tr>
                     <td>1</td>
                     <td>x</td>
