adding print button to dashboard trying to get formating like other pages

--- a/dashboard.html
+++ b/dashboard.html
@@ -79,13 +79,19 @@
                     <td>x</td>
                     <td>
                         <input class="editButton btn btn-primary" type="reset" value="Edit Game"></td>
+                        <td>
+                                <input class="printButton btn btn-primary" type="reset" value="Print Codes">
+                        </td>
                 </tr>
 
                 <tr>
                     <td>2</td>
                     <td>y</td>
                     <td>
-                        <input class="editButton btn btn-primary" type="reset" value="Edit Game">
+                        <input class="editButton btn btn-primary" type="reset" value="Print Codes">
+                    </td>
+                    <td>
+                            <input class="printButton btn btn-primary" type="reset" value="Print Codes">
                     </td>
                 </tr>
                 <tr>
@@ -93,6 +99,9 @@
                     <td>z</td>
                     <td>
                         <input class="editButton btn btn-primary" type="reset" value="Edit Game"></td>
+                        <td>
+                                <input class="printButton btn btn-primary" type="reset" value="Edit Game">
+                        </td>
                 </tr>
             </tbody>
         </table>
