--- a/dashboard.html
+++ b/dashboard.html
@@ -60,7 +60,7 @@
 
         </div>
     </nav>
-
+<!-- End of Nav bar -->
     <div class="jumbotron">
         <h1 class="display-4">Dashboard</h1>
         <p class="lead">Here are is a list of your current games.</p>
