--- a/testBench.html
+++ b/testBench.html
@@ -55,7 +55,6 @@
                                     <td>#</td>
                                     <td>Clue</td>
                                     <td>Hint</td>
-                                    <td>QR</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -64,6 +63,7 @@
                         </table>
                         <br>
                         <button type="submit" class="btn btn-danger" id="db-gen-new-game">Submit</button>
+                        <div class="images"></div>
                     </div>
                 </div>
             </div>
