Added loading authTrack.js to page, since it is now a dependency of dbControll.js

--- a/login.html
+++ b/login.html
@@ -116,6 +116,7 @@
   <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-auth.js"></script>
 
   <!-- Our scripts -->
+  <script src="assets/javascript/authTrack.js"></script>
   <script src="assets/javascript/dbControll.js"></script>
   <script src="assets/javascript/login.js"></script>
 </body>
