--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,7 @@
         </div>
     </nav>
 <!-- End of Nav bar -->
-    <div class="jumbotron">
+    <div class="jumbotron Dashboard">
         <h1 class="display-4">Dashboard</h1>
         <p class="lead">Here are is a list of your current games.</p>
         <hr class="my-4">
